--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -28,7 +28,12 @@
     "@assistant-ui/react-langgraph": "^0.5.11",
     "@assistant-ui/react-markdown": "^0.9.1",
     "@langchain/langgraph-sdk": "^0.0.105",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.0",
     "ai": "^4.3.5",
     "appwrite": "^19.0.0",
@@ -42,6 +47,7 @@
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
