Enhance task generation and lesson completion processes
- Updated the generate-tasks command to include detailed sections for sub-tasks, ensuring clarity on file creation and implementation guidance.
- Improved the process for handling lesson completion by integrating mastery updates and session context into the LessonCompletionSummaryTool.
- Refined the EvidenceDriver to support batch recording of evidence entries for better performance.
- Enhanced the SessionDriver with a new method for updating session data.
- Updated Playwright configuration for improved testing capabilities and removed deprecated files.
- Added new tests and improved existing ones to ensure comprehensive coverage of the multi-course enrollment recommender features.

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -12,7 +12,8 @@
     "test:auth": "playwright test auth.spec.ts",
     "test:happy-path": "playwright test lesson-happy-path.spec.ts",
     "test:error-handling": "playwright test lesson-error-handling.spec.ts", 
-    "test:post-completion": "playwright test lesson-post-completion.spec.ts"
+    "test:post-completion": "playwright test lesson-post-completion.spec.ts",
+    "test:multi-course": "playwright test multi-course-dashboard.spec.ts"
   },
   "keywords": ["e2e", "playwright", "ai", "education", "testing"],
   "author": "Scottish AI Lessons",
