--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@mswjs/http-middleware": "^0.10.3",
     "@playwright/test": "^1.48.0",
     "@tailwindcss/postcss": "^4",
     "@types/cookie": "^0.6.0",
@@ -66,8 +67,14 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "msw": "^2.11.2",
     "tailwindcss": "^4",
     "typescript": "^5",
     "uuid": "^11.1.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
