MVP1 - is complete but needs testing validated and put in ci cd

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/uuid": "^10.0.0",
     "markdownlint-cli2": "^0.12.1",
+    "node-appwrite": "^19.1.0",
     "uuid": "^11.1.0"
   },
   "engines": {
