--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -18,8 +18,12 @@
     "test:e2e:headed": "playwright test tests/e2e-real-auth.spec.ts --headed",
     "test:report": "playwright show-report",
     "test:install": "playwright install",
+    "migrate-seeds": "tsx scripts/migrate-seed-data.ts",
     "test:parallel": "playwright test --workers=4",
-    "test:serial": "playwright test --workers=1"
+    "test:serial": "playwright test --workers=1",
+    "test:jest": "jest",
+    "test:integration": "jest __tests__/integration/",
+    "test:integration:watch": "jest __tests__/integration/ --watch"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.10",
@@ -65,10 +69,15 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
+    "@types/jest": "^29.5.14",
+    "dotenv": "^16.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "jest": "^29.7.0",
     "msw": "^2.11.2",
     "tailwindcss": "^4",
+    "ts-jest": "^29.2.5",
+    "tsx": "^4.20.1",
     "typescript": "^5",
     "uuid": "^11.1.0"
   },
