--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -64,16 +64,21 @@
     "@mswjs/http-middleware": "^0.10.3",
     "@playwright/test": "^1.48.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/cookie": "^0.6.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
-    "@types/jest": "^29.5.14",
     "dotenv": "^16.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.1.2",
     "msw": "^2.11.2",
     "tailwindcss": "^4",
     "ts-jest": "^29.2.5",
