MCP tool successfully integrated into the sow author agent - but quality of sow is not great - need more prompt engineering

--- a/langgraph-author-agent/.env.example
+++ b/langgraph-author-agent/.env.example
@@ -14,3 +14,15 @@ ANTHROPIC_API_KEY=your_anthropic_api_key_here
 # LANGSMITH_API_KEY=your_langsmith_api_key_here
 # LANGSMITH_TRACING=true
 # LANGSMITH_PROJECT=langgraph-author-agent
+
+# Appwrite MCP Integration (optional but recommended for SoW Author Agent)
+# Required for accessing curriculum database with SQA education data
+# Get credentials from: https://cloud.appwrite.io/console
+APPWRITE_PROJECT_ID=your_project_id_here
+APPWRITE_API_KEY=your_api_key_here
+APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
+
+# Available Appwrite databases:
+# - sqa_education: Production SQA curriculum data and course structures
+# - sqa_education_test: Testing/staging curriculum data
+# - default: Scottish AI Lessons general data
