--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -19,6 +19,9 @@
     "test:report": "playwright show-report",
     "test:install": "playwright install",
     "migrate-seeds": "tsx scripts/migrate-seed-data.ts",
+    "seed:authored-sow": "tsx scripts/seedAuthoredSOW.ts",
+    "verify:authored-sows": "tsx scripts/verifyAuthoredSOWs.ts",
+    "migrate:lesson-templates": "tsx scripts/migrateLessonTemplates.ts",
     "test:parallel": "playwright test --workers=4",
     "test:serial": "playwright test --workers=1",
     "test:jest": "jest",
@@ -39,7 +42,9 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@types/minimist": "^1.2.5",
     "ai": "^4.3.5",
+    "ajv": "^8.17.1",
     "appwrite": "^19.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,6 +53,7 @@
     "js-cookie": "^3.0.5",
     "katex": "^0.16.22",
     "lucide-react": "^0.487.0",
+    "minimist": "^1.2.8",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -80,6 +86,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.1.2",
     "msw": "^2.11.2",
+    "node-appwrite": "^19.1.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.2.5",
     "tsx": "^4.20.1",
