Enhance SOW seeding process and documentation
- Updated `.gitignore` to include lesson authoring logs and ensure `playwright-report/` is ignored.
- Added new scripts in `package.json` for creating missing courses and seeding authored lessons.
- Expanded README to provide comprehensive setup instructions, including environment configuration and troubleshooting steps.
- Improved `seedAuthoredSOW.ts` with new functions for parsing subject and level from filenames, ensuring course documents exist before creating child data.
- Enhanced Appwrite data model documentation to reflect new collections and permissions, including Authored_SOW and lesson templates.
- Removed outdated architecture and database schema documentation for clarity and relevance.

--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -19,7 +19,9 @@
     "test:report": "playwright show-report",
     "test:install": "playwright install",
     "migrate-seeds": "tsx scripts/migrate-seed-data.ts",
+    "create:missing-courses": "tsx scripts/createMissingCourses.ts",
     "seed:authored-sow": "tsx scripts/seedAuthoredSOW.ts",
+    "seed:authored-lesson": "tsx scripts/seedAuthoredLesson.ts",
     "verify:authored-sows": "tsx scripts/verifyAuthoredSOWs.ts",
     "migrate:lesson-templates": "tsx scripts/migrateLessonTemplates.ts",
     "test:parallel": "playwright test --workers=4",
