--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@types/minimist": "^1.2.5",
+    "@types/pako": "^2.0.4",
     "ai": "^4.3.5",
     "ajv": "^8.17.1",
     "appwrite": "^19.0.0",
@@ -60,6 +61,7 @@
     "lucide-react": "^0.487.0",
     "minimist": "^1.2.8",
     "next": "15.3.0",
+    "pako": "^2.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
