Enhance lesson authoring and seeding scripts
- Updated `.gitignore` to include `reports` directory for better file management.
- Added new migration and cleanup scripts in `package.json` to support lesson versioning.
- Enhanced `seedAuthoredLesson.ts` to allow optional model version override via command line, improving flexibility in lesson generation.
- Implemented detailed usage instructions and model version handling in `seedAuthoredLesson.ts`, ensuring clarity for users.
- Refactored `seedAuthoredSOW.ts` to validate prerequisites before processing, enhancing error handling and user feedback.
- Updated lesson template upsert logic to include model versioning, allowing for multiple AI model versions of the same lesson.
- Revised documentation to reflect changes in the lesson authoring process and model versioning capabilities.

--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -24,6 +24,9 @@
     "seed:authored-lesson": "tsx scripts/seedAuthoredLesson.ts",
     "verify:authored-sows": "tsx scripts/verifyAuthoredSOWs.ts",
     "migrate:lesson-templates": "tsx scripts/migrateLessonTemplates.ts",
+    "migrate:lesson-versioning": "tsx scripts/migrations/add-lesson-template-versioning.ts",
+    "backfill:lesson-versioning": "tsx scripts/backfill-lesson-versioning.ts",
+    "cleanup:legacy-templates": "tsx scripts/cleanupLegacyTemplates.ts",
     "test:parallel": "playwright test --workers=4",
     "test:serial": "playwright test --workers=1",
     "test:jest": "jest",
