--- a/langgraph-author-agent/.env.example
+++ b/langgraph-author-agent/.env.example
@@ -1,6 +1,60 @@
 # API Keys Configuration
 # Copy this file to .env and fill in your actual API keys
 
+# ═══════════════════════════════════════════════════════════════
+# AI Model Configuration for Lesson Authoring
+# ═══════════════════════════════════════════════════════════════
+
+# LESSON_MODEL_VERSION - Select which AI model to use for lesson generation
+#
+# ⚠️  CRITICAL: Model MUST support tool calling (function calling) for DeepAgents!
+#
+# Cloud Models (Paid, API Key Required):
+#   - gemini-2.5-pro      : High-quality Gemini (default, requires GOOGLE_API_KEY)
+#   - gemini-flash-lite   : Fast, cost-effective Gemini (requires GOOGLE_API_KEY)
+#
+# Local Models via Ollama (Free, Tool Calling Verified):
+#   - llama-4-scout       : Meta Llama 4 Scout (67GB, MoE, 10M context) - RECOMMENDED!
+#   - llama-3.3-70b       : Meta Llama 3.3 70B (previous gen, stable)
+#   - llama-3.1-70b       : Meta Llama 3.1 70B (proven tool calling)
+#   - qwen-2.5-72b        : Alibaba Qwen2.5 72B (strong reasoning)
+#   - llama-3.1-8b        : Meta Llama 3.1 8B (budget, faster)
+#   - mixtral-8x22b       : Mistral Mixtral 8x22B (MoE architecture)
+#   - command-r-plus      : Cohere Command-R Plus (RAG-optimized)
+#
+# Setup Ollama models:
+#   1. Install Ollama: https://ollama.com/download
+#   2. Start Ollama: ollama serve
+#   3. Pull Llama 4: ollama pull llama4  (67GB download, ~1-2 hours)
+#
+# Context Window Configuration (Automatic):
+# Ollama models are pre-configured with optimized context windows:
+#   - Llama 4 Scout / Llama 3.3 70B: 64K tokens (complex lesson authoring)
+#   - Llama 3.1 70B / Mixtral / Command-R+: 32K tokens (balanced)
+#   - Llama 3.1 8B: 16K tokens (memory-conscious)
+#   - Qwen 2.5 72B: 64K tokens (strong reasoning)
+#
+# Memory Impact (Mac Pro Max 128GB, using Llama 4 Scout example):
+#   - Base model: 67GB
+#   - 64K context: +5-6GB
+#   - Total: ~85-90GB (43GB free, excellent headroom)
+#   - Inference speed: ~15-20 tokens/sec (10-15% slower than 2K default)
+#
+# To adjust context window, edit num_ctx in src/model_factory.py
+# Common sizes: 16384 (16K), 32768 (32K), 65536 (64K), 131072 (128K)
+#
+# IMPORTANT: Restart the LangGraph server after changing this value
+LESSON_MODEL_VERSION=gemini-2.5-pro
+
+# ═══════════════════════════════════════════════════════════════
+# API Keys for Cloud AI Providers
+# ═══════════════════════════════════════════════════════════════
+
+# Google API Key for Gemini models
+# Get your key at: https://aistudio.google.com/app/apikey
+# Required for: gemini-2.5-pro, gemini-flash-lite
+GOOGLE_API_KEY=your_google_api_key_here
+
 # Tavily API Key for web search
 # Get your key at: https://tavily.com/
 TAVILY_API_KEY=your_tavily_api_key_here
