Refactor lesson snapshot handling with compression and decompression utilities
- Integrated `compressJSON` and `decompressJSON` functions for efficient storage of lesson snapshots across various components, including session and lesson drivers.
- Updated lesson snapshot handling in `createLessonSession`, `updateLessonSnapshot`, and `getSessionState` methods to utilize compressed data, improving performance and reducing storage size.
- Enhanced error handling for decompression failures to ensure robust lesson state management.
- Revised documentation to reflect changes in lesson snapshot processing and compression utilities.

--- a/langgraph-author-agent/.env.example
+++ b/langgraph-author-agent/.env.example
@@ -9,8 +9,11 @@
 #
 # ⚠️  CRITICAL: Model MUST support tool calling (function calling) for DeepAgents!
 #
+# Default Model (Recommended):
+#   - default             : Anthropic Claude 3.5 Sonnet (requires ANTHROPIC_API_KEY) ⭐
+#
 # Cloud Models (Paid, API Key Required):
-#   - gemini-2.5-pro      : High-quality Gemini (default, requires GOOGLE_API_KEY)
+#   - gemini-2.5-pro      : High-quality Gemini (requires GOOGLE_API_KEY)
 #   - gemini-flash-lite   : Fast, cost-effective Gemini (requires GOOGLE_API_KEY)
 #
 # Local Models via Ollama (Free, Tool Calling Verified):
@@ -21,6 +24,11 @@
 #   - llama-3.1-8b        : Meta Llama 3.1 8B (budget, faster)
 #   - mixtral-8x22b       : Mistral Mixtral 8x22B (MoE architecture)
 #   - command-r-plus      : Cohere Command-R Plus (RAG-optimized)
+#
+# Setup Default Model:
+#   1. Set LESSON_MODEL_VERSION=default
+#   2. Ensure ANTHROPIC_API_KEY is set in .env
+#   3. No additional configuration needed - DeepAgents handles everything
 #
 # Setup Ollama models:
 #   1. Install Ollama: https://ollama.com/download
@@ -44,7 +52,7 @@
 # Common sizes: 16384 (16K), 32768 (32K), 65536 (64K), 131072 (128K)
 #
 # IMPORTANT: Restart the LangGraph server after changing this value
-LESSON_MODEL_VERSION=gemini-2.5-pro
+LESSON_MODEL_VERSION=default
 
 # ═══════════════════════════════════════════════════════════════
 # API Keys for Cloud AI Providers
