Enhance Admin Features and Middleware for Improved Access Control
- Updated middleware to include '/admin' in the list of protected routes, enhancing access control for admin functionalities.
- Added new admin-specific methods in AuthoredSOWDriver and LessonDriver to retrieve and publish SOWs and lesson templates, facilitating admin review processes.
- Enhanced Header component to conditionally display an Admin Panel link based on user admin status, improving user interface for admin users.
- Introduced new dependencies for syntax highlighting in the package.json, supporting improved code presentation in the admin panel.
- Refactored compression utilities to handle additional data formats, ensuring compatibility with new admin features.
- Removed outdated lesson critic result and template schema documentation, streamlining the codebase and focusing on current requirements.

--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -50,6 +50,7 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@types/minimist": "^1.2.5",
     "@types/pako": "^2.0.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^4.3.5",
     "ajv": "^8.17.1",
     "appwrite": "^19.0.0",
@@ -68,6 +69,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.6",
     "recharts": "^3.2.1",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
