Implement Compression for Authored SOW Entries and Enhance Course Filtering
- Added compression functionality for SOW entries in AuthoredSOWDriver and SOWDriver, utilizing gzip+base64 to optimize storage and retrieval.
- Updated CourseCatalogPage to filter courses based on published SOWs, improving the user experience by displaying only relevant courses.
- Introduced new migration scripts in package.json for compressing SOW entries, facilitating data management.
- Enhanced error handling for decompression failures across various components, ensuring robust data integrity.
- Updated tests and documentation to reflect changes in SOW entry handling and course filtering logic.

--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -27,6 +27,8 @@
     "migrate:lesson-versioning": "tsx scripts/migrations/add-lesson-template-versioning.ts",
     "backfill:lesson-versioning": "tsx scripts/backfill-lesson-versioning.ts",
     "cleanup:legacy-templates": "tsx scripts/cleanupLegacyTemplates.ts",
+    "migrate:compress-sow-entries": "tsx scripts/migrateCompressAuthoredSOWs.ts",
+    "migrate:compress-sow-entries:dry-run": "tsx scripts/migrateCompressAuthoredSOWs.ts --dry-run",
     "test:parallel": "playwright test --workers=4",
     "test:serial": "playwright test --workers=1",
     "test:jest": "jest",
