--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -42,7 +42,9 @@
     "@assistant-ui/react-langgraph": "^0.5.11",
     "@assistant-ui/react-markdown": "^0.9.1",
     "@langchain/langgraph-sdk": "^0.0.105",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.8",
