--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -36,6 +36,7 @@
     "test:integration:watch": "jest __tests__/integration/ --watch"
   },
   "dependencies": {
+    "@aarkue/tiptap-math-extension": "^1.4.0",
     "@ai-sdk/openai": "^1.3.10",
     "@assistant-ui/react": "^0.9.1",
     "@assistant-ui/react-ai-sdk": "^0.9.1",
@@ -53,6 +54,9 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@tiptap/extension-placeholder": "^2.27.1",
+    "@tiptap/react": "^2.27.1",
+    "@tiptap/starter-kit": "^2.27.1",
     "@types/minimist": "^1.2.5",
     "@types/pako": "^2.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -68,6 +72,7 @@
     "jspdf": "^3.0.3",
     "katex": "^0.16.22",
     "lucide-react": "^0.487.0",
+    "mathlive": "^0.107.1",
     "minimist": "^1.2.8",
     "next": "15.3.0",
     "pako": "^2.1.0",
