--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -42,6 +42,7 @@
     "@assistant-ui/react-ai-sdk": "^0.9.1",
     "@assistant-ui/react-langgraph": "^0.5.11",
     "@assistant-ui/react-markdown": "^0.9.1",
+    "@excalidraw/excalidraw": "^0.18.0",
     "@langchain/langgraph-sdk": "^0.0.105",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -79,6 +80,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-sketch-canvas": "^6.2.0",
     "react-syntax-highlighter": "^15.6.6",
     "recharts": "^3.2.1",
     "rehype-katex": "^7.0.1",
