--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -69,6 +69,7 @@
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.9",
+    "isomorphic-dompurify": "^2.30.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.3",
     "katex": "^0.16.22",
