--- a/claud_author_agent/requirements.txt
+++ b/claud_author_agent/requirements.txt
@@ -4,6 +4,9 @@ claude-agent-sdk>=0.1.3
 # Async runtime
 anyio>=4.0.0
 
+# Environment variable loading
+python-dotenv>=1.0.0
+
 # Appwrite SDK - For direct database access in validation
 appwrite>=5.0.0
 
