--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -87,6 +87,7 @@
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "unist-util-visit": "^5.0.0"
