--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -55,6 +55,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-placeholder": "^2.27.1",
     "@tiptap/react": "^2.27.1",
     "@tiptap/starter-kit": "^2.27.1",
@@ -72,19 +73,21 @@
     "isomorphic-dompurify": "^2.30.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.3",
-    "katex": "^0.16.22",
+    "katex": "^0.16.25",
     "lucide-react": "^0.487.0",
     "mathlive": "^0.107.1",
+    "mermaid": "^10.9.5",
     "minimist": "^1.2.8",
     "next": "15.3.0",
     "pako": "^2.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0",
+    "react-markdown": "^9.1.0",
     "react-sketch-canvas": "^6.2.0",
     "react-syntax-highlighter": "^15.6.6",
     "recharts": "^3.2.1",
     "rehype-katex": "^7.0.1",
+    "rehype-mermaid": "^2.1.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "sonner": "^2.0.7",
