--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -56,6 +56,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@stripe/stripe-js": "^8.4.0",
     "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-placeholder": "^2.27.1",
     "@tiptap/react": "^2.27.1",
@@ -93,6 +94,8 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "sonner": "^2.0.7",
+    "stripe": "^19.3.1",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "unist-util-visit": "^5.0.0"
@@ -111,6 +114,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/stripe": "^8.0.416",
     "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.7",
     "eslint": "^9",
