Implement Stripe subscription integration and enhance payment handling
- Added Stripe subscription setup instructions to the README files for both the main application and the frontend.
- Implemented webhook handlers for Stripe events including invoice payment failures, subscription updates, and deletions, ensuring immediate access revocation and status updates in the database.
- Refactored the subscription status API to include detailed user subscription data and improved logging for better traceability.
- Updated various components to utilize server-side API calls for fetching subscription and course data, enhancing security and performance.
- Created new components for managing subscription status and notifications, including a banner for payment failures.
- Added comprehensive documentation for the payment system and updated existing documentation to reflect recent changes.

--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -34,7 +34,8 @@
     "test:serial": "playwright test --workers=1",
     "test:jest": "jest",
     "test:integration": "jest __tests__/integration/",
-    "test:integration:watch": "jest __tests__/integration/ --watch"
+    "test:integration:watch": "jest __tests__/integration/ --watch",
+    "flag-test-users": "tsx scripts/flag-test-users.ts"
   },
   "dependencies": {
     "@aarkue/tiptap-math-extension": "^1.4.0",
