--- a/e2e/package.json
+++ b/e2e/package.json
@@ -11,9 +11,17 @@
     "install-browsers": "playwright install",
     "test:auth": "playwright test auth.spec.ts",
     "test:happy-path": "playwright test lesson-happy-path.spec.ts",
-    "test:error-handling": "playwright test lesson-error-handling.spec.ts", 
+    "test:error-handling": "playwright test lesson-error-handling.spec.ts",
     "test:post-completion": "playwright test lesson-post-completion.spec.ts",
-    "test:multi-course": "playwright test multi-course-dashboard.spec.ts"
+    "test:multi-course": "playwright test multi-course-dashboard.spec.ts",
+    "test:auth-refactor": "playwright test tests/auth-refactor",
+    "test:admin": "playwright test tests/auth-refactor/admin-panel.spec.ts",
+    "test:browse-courses": "playwright test tests/auth-refactor/browse-courses.spec.ts",
+    "test:dashboard": "playwright test tests/auth-refactor/student-dashboard.spec.ts",
+    "test:onboarding": "playwright test tests/auth-refactor/onboarding.spec.ts",
+    "test:curriculum": "playwright test tests/auth-refactor/curriculum.spec.ts",
+    "test:progress": "playwright test tests/auth-refactor/progress-tracking.spec.ts",
+    "test:stripe": "playwright test tests/stripe/subscription-flow.spec.ts"
   },
   "keywords": ["e2e", "playwright", "ai", "education", "testing"],
   "author": "Scottish AI Lessons",
