feat(diagram_author_nano): Rewrite implementation to align with Claude Agent SDK architecture
- Created a new specification for the Diagram Author Nano, detailing the required architecture and components.
- Implemented the Gemini MCP Tool for generating diagrams using the Gemini API.
- Developed prompts for the Gemini Subagent and Visual Critic Subagent, ensuring context-aware generation and critique.
- Updated the Main Orchestrator prompt to manage the diagram generation workflow.
- Rewrote the Diagram Author Nano client to utilize the Claude SDK pattern, removing Python prompt crafting.
- Added a test script for batch upserting diagrams from workspace data.
- Introduced a validation script for JSXGraph templates against the diagramScreenshot service.
- Deleted outdated files that do not conform to the new architecture.

--- a/claud_author_agent/.env.example
+++ b/claud_author_agent/.env.example
@@ -1,26 +1,158 @@
-# Claude Diagram Generation Agent Environment Configuration
+# ═══════════════════════════════════════════════════════════════════════════════
+# Claude Diagram Generation Agent - Environment Configuration
+# ═══════════════════════════════════════════════════════════════════════════════
 # Copy this file to .env and fill in your values
+#
+# Two diagram generation backends are available:
+#   1. JSXGraph Backend (diagram_author_cli.py) - Interactive diagrams via Claude
+#   2. Gemini Nano Backend (diagram_author_nano_cli.py) - Static PNG via Gemini
+# ═══════════════════════════════════════════════════════════════════════════════
+
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# REQUIRED: Appwrite Configuration (for lesson templates and diagram storage)
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# Appwrite Cloud Endpoint
+APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
+
+# Appwrite Project ID
+APPWRITE_PROJECT_ID=your_project_id_here
+
+# Appwrite API Key (Server-side, with databases + storage permissions)
+APPWRITE_API_KEY=your_appwrite_api_key_here
+
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# OPTIONAL: Logging Configuration
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# Log Level
+# Options: DEBUG, INFO, WARNING, ERROR
+# Default: INFO
+LOG_LEVEL=INFO
+
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# JSXGraph Backend Configuration (diagram_author_cli.py)
+# ═══════════════════════════════════════════════════════════════════════════════
+# Used for interactive diagram generation via Claude + JSXGraph rendering
 
 # DiagramScreenshot Service URL
 # Default: http://localhost:3001 (local development)
-# The diagram screenshot service must be running for diagram generation to work
+# The diagram screenshot service must be running for JSXGraph diagrams
 DIAGRAM_SCREENSHOT_URL=http://localhost:3001
 
 # DiagramScreenshot API Key
-# Default: dev-api-key-change-in-production (matches docker-compose.yml default)
+# Default: dev-api-key-change-in-production
 # Change this in production for security
 DIAGRAM_SCREENSHOT_API_KEY=dev-api-key-change-in-production
 
-# Claude API Key (required for agent execution)
-# Get from: https://console.anthropic.com/
-ANTHROPIC_API_KEY=your_api_key_here
 
-# Appwrite Configuration (for lesson template access and diagram storage)
-# These should match your Appwrite instance configuration
-APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
-APPWRITE_PROJECT_ID=your_project_id
-APPWRITE_API_KEY=your_api_key
+# ═══════════════════════════════════════════════════════════════════════════════
+# Gemini Nano Backend Configuration (diagram_author_nano_cli.py)
+# ═══════════════════════════════════════════════════════════════════════════════
+# Used for static PNG diagram generation via Google Gemini image models
+#
+# Usage:
+#   python -m src.diagram_author_nano_cli --courseId course_xxx --order 1
+#   python -m src.diagram_author_nano_cli --courseId course_xxx --order 1 --card-order 2
 
-# Logging Configuration
-# Options: DEBUG, INFO, WARNING, ERROR
-LOG_LEVEL=INFO
+# ─────────────────────────────────────────────────────────────────────────────
+# REQUIRED: Gemini API Key
+# ─────────────────────────────────────────────────────────────────────────────
+# Get from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# ─────────────────────────────────────────────────────────────────────────────
+# OPTIONAL: Gemini Image Model
+# ─────────────────────────────────────────────────────────────────────────────
+# Available models:
+#   - gemini-2.5-flash-image          : Nano Banana (DEFAULT - recommended)
+#   - gemini-3-pro-image-preview      : Nano Banana Pro (higher quality)
+#   - imagen-4.0-generate-001         : Imagen 4 (high quality, slower)
+#
+# Default: gemini-2.5-flash-image
+GEMINI_IMAGE_MODEL=gemini-2.5-flash-image
+
+# ─────────────────────────────────────────────────────────────────────────────
+# OPTIONAL: Gemini Critique Model (for visual validation)
+# ─────────────────────────────────────────────────────────────────────────────
+# Model used for critiquing generated diagrams (vision + text model).
+# This should be a model with strong vision capabilities for accurate validation.
+# Uses multi-modal input to view the generated image and validate against prompt.
+#
+# Available models:
+#   - gemini-3-pro-preview   : Latest, best vision (DEFAULT - recommended)
+#   - gemini-2.0-flash       : Fast, good vision
+#   - gemini-2.0-pro         : Higher quality, slower
+#
+# Default: gemini-3-pro-preview
+GEMINI_CRITIQUE_MODEL=gemini-3-pro-preview
+
+# ─────────────────────────────────────────────────────────────────────────────
+# OPTIONAL: Gemini Image Aspect Ratio
+# ─────────────────────────────────────────────────────────────────────────────
+# Available options:
+#   - 1:1   : Square (2048x2048 at 2K)
+#   - 16:9  : Widescreen (2752x1536 at 2K) - optimal for slides/presentations
+#   - 4:3   : Standard (2048x1536 at 2K)
+#   - 3:4   : Portrait standard
+#   - 9:16  : Portrait widescreen
+#
+# Default: 16:9 (optimal for educational slides)
+GEMINI_IMAGE_ASPECT_RATIO=16:9
+
+# ─────────────────────────────────────────────────────────────────────────────
+# OPTIONAL: Gemini Image Size/Resolution
+# ─────────────────────────────────────────────────────────────────────────────
+# Available options:
+#   - 1K  : ~1024px base width (faster, smaller files)
+#   - 2K  : ~2048px base width (DEFAULT - good balance)
+#   - 4K  : ~4096px base width (highest quality, larger files)
+#
+# All images are generated at 300 DPI (print-quality)
+#
+# Default: 2K
+GEMINI_IMAGE_SIZE=2K
+
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# Storage Uploader Configuration (Retry Logic)
+# ═══════════════════════════════════════════════════════════════════════════════
+# These settings control retry behavior for transient network errors (SSL, timeout)
+# when uploading images to Appwrite Storage.
+#
+# Defaults are set in storage_uploader.py:
+#   MAX_RETRIES = 5
+#   INITIAL_BACKOFF_SECONDS = 1.0
+#   BACKOFF_MULTIPLIER = 2.0
+#   MAX_BACKOFF_SECONDS = 30.0
+#
+# Retry sequence: 1s -> 2s -> 4s -> 8s -> 16s (capped at 30s)
+# Currently not configurable via env vars (hardcoded for reliability)
+
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# Visual Critic Configuration
+# ═══════════════════════════════════════════════════════════════════════════════
+# The visual critic validates generated diagrams and provides feedback.
+#
+# Quality thresholds (hardcoded in visual_critic_nano.md):
+#   - ACCEPT: score >= 0.85
+#   - REFINE: score < 0.85 AND iteration < max
+#   - REJECT: iteration >= max (best effort accepted)
+
+# ─────────────────────────────────────────────────────────────────────────────
+# Maximum refinement iterations per diagram
+# ─────────────────────────────────────────────────────────────────────────────
+# Higher values allow more refinement attempts but increase generation time/cost.
+# Lower values are faster but may accept lower quality diagrams.
+#
+# Recommended values:
+#   - 3  : Fast iteration, good for testing (DEFAULT)
+#   - 5  : Balanced quality and speed
+#   - 10 : Maximum quality, longer generation time
+#
+# Default: 3
+DIAGRAM_MAX_ITERATIONS=3
