--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -88,6 +88,7 @@
     "react-markdown": "^9.1.0",
     "react-sketch-canvas": "^6.2.0",
     "react-syntax-highlighter": "^15.6.6",
+    "react-zoom-pan-pinch": "^3.7.0",
     "recharts": "^3.2.1",
     "rehype-katex": "^7.0.1",
     "rehype-mermaid": "^2.1.0",
