--- a/claud_author_agent/requirements.txt
+++ b/claud_author_agent/requirements.txt
@@ -1,6 +1,9 @@
 # Claude Agent SDK - Core dependency
 claude-agent-sdk>=0.1.3
 
+# Anthropic SDK - For vision-based critique (uses max subscription when no API key set)
+anthropic>=0.40.0
+
 # Async runtime
 anyio>=4.0.0
 
@@ -9,6 +12,9 @@ python-dotenv>=1.0.0
 
 # Appwrite SDK - For direct database access in validation
 appwrite>=5.0.0
+
+# Google Gemini SDK - For Nano Banana Pro image generation
+google-genai>=0.7.0
 
 # Optional: Testing dependencies
 pytest>=7.4.0
