--- a/diagramScreenshot/package.json
+++ b/diagramScreenshot/package.json
@@ -10,33 +10,39 @@
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
-  "keywords": ["jsxgraph", "diagram", "screenshot", "headless"],
+  "keywords": [
+    "jsxgraph",
+    "diagram",
+    "screenshot",
+    "headless"
+  ],
   "author": "Scottish AI Lessons",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "playwright": "^1.40.0",
-    "zod": "^3.22.4",
-    "dotenv": "^16.3.1",
-    "winston": "^3.11.0",
+    "@google/generative-ai": "^0.24.1",
     "compression": "^1.7.4",
-    "helmet": "^7.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "p-queue": "^8.0.1",
+    "playwright": "^1.40.0",
     "prom-client": "^15.1.0",
-    "p-queue": "^8.0.1"
+    "winston": "^3.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
-    "@types/express": "^4.17.21",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.2",
-    "nodemon": "^3.0.2",
-    "vitest": "^1.1.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.6",
+    "@types/supertest": "^6.0.2",
     "@vitest/ui": "^1.1.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3",
-    "@types/supertest": "^6.0.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.0"
   }
 }
