--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -46,6 +46,7 @@
     "@assistant-ui/react-markdown": "^0.9.1",
     "@excalidraw/excalidraw": "^0.18.0",
     "@langchain/langgraph-sdk": "^0.0.105",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
