working practice wizard

--- a/assistant-ui-frontend/package.json
+++ b/assistant-ui-frontend/package.json
@@ -32,6 +32,10 @@
     "migrate:compress-sow-entries:dry-run": "tsx scripts/migrateCompressAuthoredSOWs.ts --dry-run",
     "test:parallel": "playwright test --workers=4",
     "test:serial": "playwright test --workers=1",
+    "test:wizard": "playwright test tests/practice-wizard-scenarios.spec.ts --workers=1",
+    "test:wizard:visual": "VISUAL=true playwright test tests/practice-wizard-scenarios.spec.ts --headed --workers=1",
+    "test:wizard:debug": "playwright test tests/practice-wizard-scenarios.spec.ts --debug --workers=1",
+    "test:wizard:ui": "playwright test tests/practice-wizard-scenarios.spec.ts --ui",
     "test:jest": "jest",
     "test:unit": "jest --selectProjects unit",
     "test:unit:watch": "jest --selectProjects unit --watch",
